# llmsays

./: .gitignore  Dockerfile  PYPI_README.md  README.md  TODO.md  manual_test.py  paper.bib  paper.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yaml  cicd.yml  draft-pdf.yml
docs/: installation.md
examples/: quick_start.py
src/llmsays/: __init__.py  router.py
tests/: test_all_models.py  test_llmsays.py  test_router.py
