[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llmsays"
version = "0.1.0"
description = "One-line LLM queries via OpenRouter"
authors = [{name = "Your Name", email = "your@email.com"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openai>=1.40.0",
    "semantic-router[hybrid]>=0.0.50",
    "sentence-transformers>=3.0.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "black>=24.0"]
test = ["pytest>=8.0", "pytest-mock>=3.0"]

[project.scripts]
llmsays = "llmsays:cli"

[tool.setuptools.packages.find]
where = ["src"]