[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llmsays"
version = "0.1.3"
description = "One-line LLM queries with smart routing and provider failover"
authors = [
    { name = "Abhiraj Adhikary", email = "abhirajadhikary06@gmail.com" },
    { name = "Anik Chand", email = "anikchand461@gmail.com" },
    { name = "Rudra Bhowmick", email = "bhowmickrudra07@gmail.com" }
]
license = {file = "LICENSE"}
readme = "PYPI_README.md"
requires-python = ">=3.9"
dependencies = [
    "openai",
    "groq",
    "openrouter",
    "baseten",
    "fireworks-ai",
    "semantic-router[hybrid]>=0.0.50",
    "sentence-transformers>=3.0.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "black>=24.0"]
test = ["pytest>=8.0", "pytest-mock>=3.0"]

[project.scripts]
llmsays = "llmsays:cli"

[tool.setuptools.packages.find]
where = ["src"]